--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     implementation 'com.jpardogo.materialtabstrip:library:1.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
 }
