--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
