--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -48,7 +48,8 @@
         </provider>
 
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".ScanLinkActivity"></activity>
+        <activity android:name=".ScanLinkActivity" />
+        <activity android:name=".NewScanActivity"></activity>
     </application>
 
 </manifest>
