--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "android.example.com.prescriptminder"
         minSdkVersion 24
@@ -29,12 +30,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.melnykov:floatingactionbutton:1.3.0'
     implementation 'com.jpardogo.materialtabstrip:library:1.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'com.tyorikan:voice-recording-visualizer:1.0.3@aar'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
+    implementation 'org.apache.httpcomponents:httpcore:4.4.10'
+    implementation 'com.joooonho:selectableroundedimageview:1.0.1'
 }
